// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Hand /> renders properly 1`] = `
<TransparentPaper>
  <WithStyles(ForwardRef(Tooltip))
    title="Shuffle hand"
  >
    <WithStyles(ForwardRef(Button))
      disabled={true}
      onClick={[Function]}
      size="small"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Memo([object Object])
        color="action"
        fontSize="small"
      />
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Tooltip))>
  <WithStyles(ForwardRef(Divider)) />
  <Styled(MuiBox)
    display="flex"
    flexDirection="column"
    flexWrap="wrap"
    height="480px"
    p={1}
    width="70px"
  />
</TransparentPaper>
`;

exports[`<Hand /> renders properly with player 1`] = `
<TransparentPaper>
  <WithStyles(ForwardRef(Tooltip))
    title="Shuffle hand"
  >
    <WithStyles(ForwardRef(Button))
      disabled={false}
      onClick={[Function]}
      size="small"
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <Memo([object Object])
        color="action"
        fontSize="small"
      />
    </WithStyles(ForwardRef(Button))>
  </WithStyles(ForwardRef(Tooltip))>
  <WithStyles(ForwardRef(Divider)) />
  <Styled(MuiBox)
    display="flex"
    flexDirection="column"
    flexWrap="wrap"
    height="0px"
    p={1}
    width="70px"
  >
    <Tile
      boardPosition={null}
      key="A1"
      tile={
        Object {
          "id": "A1",
          "letter": "A",
        }
      }
    />
    <Tile
      boardPosition={null}
      key="B1"
      tile={
        Object {
          "id": "B1",
          "letter": "B",
        }
      }
    />
    <Tile
      boardPosition={null}
      key="C1"
      tile={
        Object {
          "id": "C1",
          "letter": "C",
        }
      }
    />
  </Styled(MuiBox)>
</TransparentPaper>
`;
